# CppUtils

./: .gitignore  CMakeLists.txt  TODO.txt  xmake.lua
.github/vorkflows/: c-cpp.yml
.github/workflows/: c-cpp.yml
include/cpputils/: eventmanager.hpp  logger.hpp  simplemacros.hpp  stringutils.hpp
src/: logger.cpp  stringutils.cpp  unix_logger.cpp  win_logger.cpp
src/private/utils/: logger.cpp  win_logger.cpp
src/public/: cpputils
src/public/utils/: eventManager.h  logger.h  stringutils.h
tests/: main.cpp
